public/stylesheets/style.css
body,
html {
    height: 100%;
    padding: 0;
    margin: 0;
    font-family: sans-serif;
    background-color: #e0f3f9;
    color: #fcfdfd;
}

h1 {
    font-size: 3em;
}

.titleformat {
    -webkit-text-stroke: 1px black;
    -webkit-text-fill-color: #fcfdfd;
    text-align: center;
    margin-top: 10%;
}

.login-form {
    margin: 15%; 
    text-align: center;
}

.login-title {
    color: black; 

}

#email-login {
    border: 1px solid #cacbcb;
    padding: 10px;
    border-radius: 5px;
    font-size: 1em;
    margin-top: 1em;
    text-align: center;

}

#password-login {
    border: 1px solid #cacbcb;
    padding: 10px; 
    border-radius: 5px;
    font-size: 1em;
    margin-top: 1em; 
    text-align: center;
}

.loginbtn {
    position: relative;
    padding: 8px 16px;
    border-radius: 5px;
    border-color: none; 
    text-align: center;
    margin-top: 1em; 
}

.loginbtn:active {
    background-color: #5bd0f4;
}

.loginbtn::after {
    content: "";
    position: absoute; 
    width: 16px; 
    height: 16px; 
    margin: auto;
    border: 4px solid transparent;
    border-top-color: #ffffff;
    border-radius: 50%;
    animation: button-loading-spinner 1s ease infinite; 

}

@keyframes button-loading-spinner {
    from {
        transform: rotate(0turn);
    }

    to {
        transform: rotate(1turn); 
    }
}

.signup-link {
    color: black; 
    margin: 10px; 
}

a {
    text-decoration: none;
    color:  #5bd0f4;
    font-weight: bold;
}

a:hover {
    color: #dbc1ac;
}

.notransition {
    -webkit-text-stroke: none;
    -webkit-text-fill-color: none;
}

.sideNavBar {
    height: 100%;
    width: 0;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    background-color: #aae6f9;
    overflow-x: hidden;
    padding-top: 3%;
    transition: 0.5s; 
}

.sideNavBar a {
    padding: 8px;
    text-decoration: none;
    font-size: 1em;
    color: #fcfdfd;
    display: block;
    transition: 0.5s; 
}

.sideNavBar a:hover {
    background-color: #5bd0f4;
}

.sideNavBar .closenav {
    position: absoulte; 
    top: 0;
    right: 25px; 
    font-size: 1em;
    margin-left: 50px; 
}

